--- a/instaaz.yml
+++ b/instaaz.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
-  become: true
+
   tasks: 
   - name: install azure module
-    shell: pip install ansible[azure]
+    shell: pip install --user ansible[azure]
 
