--- a/instaaz.yml
+++ b/instaaz.yml
@@ -2,6 +2,7 @@
 - hosts: all
 
   tasks: 
-  - name: run powershell
-    win_shell: get-services
-
+  - name: Add a powershell module
+    win_psmodule:
+      name: PowershellModule
+      state: present
